tdf#46938 ooxmlexport: override style tabstops when tabs removed

Having no tabs defined is the default value, so nothing generally
needs to be written. But if the paragraph style defines tabstops,
but the current paragraph doesn't have any, then those style
tabstops need to be cleared.

Change-Id: I7a818c658403cc683b0c5b7452b6c88ea00f771d
Reviewed-on: https://gerrit.libreoffice.org/44244
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Justin Luth <justin_luth@sil.org>